--- a/myapp/src/component/organisms/trainingList.scss
+++ b/myapp/src/component/organisms/trainingList.scss
@@ -1,8 +1,9 @@
 .training-list{
     border:solid 1px black;
-    border-radius: 5px;
+    border-radius: 10px;
+    margin-top: 0;
     padding: 8px;
-    width: 50%;
+    width: 100%;
     h1{
         margin: 0;
     }
