--- a/myapp/src/App.scss
+++ b/myapp/src/App.scss
@@ -1,25 +1,24 @@
 * {
   list-style: none;
   box-sizing: border-box;
-  
+
 }
 
 .body{
   margin: 0 20%;
-  display: flex;
-                          
-  .side{
-    width: 25%;  
-    padding: 8px;
-    // position: fixed;  
-  }
+  text-align: center;
 
   .main{
     padding: 8px;
-    width: 75%;
     height: 90vh;
     overflow: scroll;
     scrollbar-width: none;
+
+    .component{
+      background-color: rgba(255,255,255,0.3);
+      border-radius: 10px;
+      padding: 40px 16px;
+    }
 
   }
   .main::-webkit-scrollbar{
