--- a/myapp/src/component/atoms/input.scss
+++ b/myapp/src/component/atoms/input.scss
@@ -2,8 +2,26 @@ label{
     display: block;
     width: 50%;
     margin: 16px auto;
+    position: relative;
     input{
         width: 100%;        
         padding: 8px;
     }
+
+    .fa-eye-slash{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 8px;
+        cursor: pointer;
+    }
+
+    .fa-eye{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 8px;
+        cursor: pointer;
+    }
+
 }
