--- a/myapp/src/component/molecules/navigation.scss
+++ b/myapp/src/component/molecules/navigation.scss
@@ -1,14 +1,13 @@
 @import '../../color.scss';
 
-.sidebar{
+.navigation{
     display: flex;
-    border: solid 1px;
     border-radius: 10px;
-    background-color: $light-gray;
-    flex-direction: column;
 
     .link{
         margin: 10px;
+        color: $gold;
+
 
         .fas{
             font-size: 24px;
