--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -1,4 +1,7 @@
 body {
+  background:no-repeat url(./image/naked.jpg);
+  background-size:cover;
+  background-position: 10%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
