サインイン時　ユーザー重複エラー表示追加

--- a/myapp/src/component/organisms/inputRecord.scss
+++ b/myapp/src/component/organisms/inputRecord.scss
@@ -28,6 +28,7 @@ form{
 
     .success{
         opacity: 0;
+        padding: 4px;
         width: 50%;
         margin: auto;
         text-align: center;
