--- a/myapp/src/component/organisms/trainingList.scss
+++ b/myapp/src/component/organisms/trainingList.scss
@@ -1,5 +1,6 @@
 .training-list{
     border:solid 1px black;
+    background-color: white;
     border-radius: 10px;
     margin-top: 0;
     padding: 8px;
