--- a/myapp/src/component/organisms/header.scss
+++ b/myapp/src/component/organisms/header.scss
@@ -8,10 +8,10 @@ header{
     .title{
 
         font-weight: bold;
-        font-size:28px;
         margin:24px 0 8px 40px;
         a{
             color: $gold;
+            font-size: 2.4rem;
         }
     }
 
