--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -1,3 +1,7 @@
+html{
+  font-size: 62.5%;
+}
+
 body {
   background:no-repeat url(./image/naked.jpg);
   background-size:cover;
@@ -8,6 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  
 }
 
 code {
