--- a/myapp/src/component/organisms/header.scss
+++ b/myapp/src/component/organisms/header.scss
@@ -6,7 +6,6 @@ header{
     justify-content: space-between;
     padding: 0 10%;
     .title{
-
         font-weight: bold;
         margin:24px 0 8px 40px;
         a{
@@ -15,8 +14,8 @@ header{
         }
     }
 
-    .side{
+    .navi{
         margin:24px 40px 8px 0px;
-
     }
+
 }
