ログイン後のホーム画面に全ユーザーの記録が出るようにした

--- a/myapp/src/component/organisms/trainingList.scss
+++ b/myapp/src/component/organisms/trainingList.scss
@@ -9,3 +9,11 @@
         margin: 0;
     }
 }
+
+.alluser-list{
+    display: flex;
+    flex-wrap: wrap;
+    .user-record{
+        width: 50%;
+    }
+}
