--- a/myapp/src/component/organisms/trainingList.scss
+++ b/myapp/src/component/organisms/trainingList.scss
@@ -13,7 +13,13 @@
 .alluser-list{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+
     .user-record{
-        width: 50%;
+        width: 45%;
+        background: white;
+        padding: 8px;
+        margin: 8px;
+        border-radius: 5px;
     }
 }
