--- a/myapp/src/component/templates/SignIn.scss
+++ b/myapp/src/component/templates/SignIn.scss
@@ -17,7 +17,15 @@
             transition: 3s;
         }
     }
-
-    
 }
+
+@media (max-width:599px) {
+
+    .signin{
+        .error{
+            width: auto;
+        } 
+     
+    }
+  }
 
