--- a/myapp/src/component/molecules/navigation.scss
+++ b/myapp/src/component/molecules/navigation.scss
@@ -15,3 +15,16 @@
     }
 
 }
+
+@media (max-width:599px) {
+    .navigation{
+        justify-content: center;
+        .link{
+            color: black;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            padding: 0px 4px;
+        }
+    }
+}
