--- a/myapp/src/component/templates/home.scss
+++ b/myapp/src/component/templates/home.scss
@@ -5,3 +5,13 @@
         text-align: left;
     }
 }
+
+@media (max-width:599px) {
+    .home{
+        p{
+            margin: 0;
+            padding: 16px 8px;
+        }
+    }
+
+}
