--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -13,10 +13,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
-  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media (max-width:599px) {
+  body{
+    background-position: 50%;
+  }
+} 
