--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -4,6 +4,7 @@ html{
 
 body {
   background:no-repeat url(./image/naked.jpg);
+  background-attachment: fixed;
   background-size:cover;
   background-position: 10%;
   margin: 0;
