--- a/myapp/src/App.scss
+++ b/myapp/src/App.scss
@@ -18,7 +18,7 @@
   .main{
     padding: 8px;
     height: 90vh;
-    overflow: scroll;
+    // overflow: scroll;
     scrollbar-width: none;
 
     .component{
