日付を矢印で変更できるように実装

--- a/myapp/src/component/organisms/inputRecord.scss
+++ b/myapp/src/component/organisms/inputRecord.scss
@@ -19,10 +19,23 @@ form{
         }
     }
 
-    button{
-        @include form;
+    .input-date{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         width: 50%;
-        margin:16px auto;
+        margin: auto;
+
+        button{
+            margin: 0 8px;
+        }
+    
+    }
+    
+    button{
+            @include form;
+            width: 50%;
+            margin:16px auto;
     }
 
     .success{
