ルーティング調整 UI調整

--- a/myapp/src/App.scss
+++ b/myapp/src/App.scss
@@ -48,6 +48,8 @@ a{
       padding: 8px 0;
       .component{
         padding: 8px;
+        margin-right: 0;
+        margin-left: 0px;
       }
     }
   } 
