--- a/myapp/src/component/organisms/inputRecord.scss
+++ b/myapp/src/component/organisms/inputRecord.scss
@@ -7,15 +7,17 @@
     width: 100%;        
 }
 
-form{
-    margin:0 auto;
-    display: flex;
-    flex-direction: column;
+.input-record{
 
-    label{
-        select{
-            @include form;
+    .input-count{
+        width: 50%;
+        margin: auto;
+        label{
+            select{
+                @include form;
+            }
         }
+    
     }
 
     .input-date{
@@ -31,8 +33,9 @@ form{
     
     }
     
-    button{
+    .record-button{
             @include form;
+            width: 50%;
             margin:16px auto;
     }
 
@@ -64,7 +67,11 @@ form{
 }
 // 599
 @media (max-width:1024px) {
-    form{
+    
+    .input-record{
+        .input-count{
+            width: 100%;
+        }
         .success{
             width: 100%;
         }
