筋トレ日数表示 UI調整必要

--- a/myapp/src/component/templates/SignIn.scss
+++ b/myapp/src/component/templates/SignIn.scss
@@ -1,8 +1,8 @@
 @import '../../color.scss';
 
 .signin{    
-    margin:8px;
-    width: 50%;
+    margin:8px 0;
+    width: 48%;
     p{
         width: 50%;
         margin: auto;
