--- a/myapp/src/component/templates/Login.scss
+++ b/myapp/src/component/templates/Login.scss
@@ -1,8 +1,8 @@
 @import '../../color.scss';
 
 .login{
-    margin: 8px;
-    width: 50%;
+    margin: 8px 0;
+    width: 48%;
 
     .login-form{
         .guest{
