--- a/myapp/src/component/organisms/inputRecord.scss
+++ b/myapp/src/component/organisms/inputRecord.scss
@@ -15,6 +15,11 @@
         label{
             select{
                 @include form;
+                margin: 0;
+                padding:8px;
+                box-sizing:border-box;  
+                width: 100%;        
+            
             }
         }
     
