ホーム レスポンシブ化

--- a/myapp/src/component/page/Home.scss
+++ b/myapp/src/component/page/Home.scss
@@ -14,3 +14,21 @@
         }
     }
 }
+
+@media (max-width:1024px) {
+    .home{
+
+        .body{
+            flex-direction: column;
+
+            .graph{
+                width: 100%;
+            }
+    
+            .record{
+                margin-left:0 ;
+                width: 100%;
+            }
+        }
+    }   
+}
